--- a/makers_test/account/templates/account/login.html
+++ b/makers_test/account/templates/account/login.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sign up</title>
+    <title>Sign in</title>
 </head>
 <body>
-    <h1>Sign up</h1>
+    <h1>Sign in</h1>
     <form method="post">
-        {{ form.as_p }}
         {% csrf_token %}
-        <button type="submit">Sign up</button>
+        {{ form.as_p }}
+        <button type="submit">Login</button>
     </form>
 </body>
 </html>
